# vcloud-rest-openapi

./: .gitignore  27.0-rest-api.yml  27.0.json  27.0.yml  29.0-rest-api.json  29.0.json  29.0.yml  30.0-rest-api.json  30.0.json  30.0.yml  31.0.json  31.0.yml  32.0-cloudapi.json  32.0-cloudapi.yml  32.0-rest-api.yml  32.0.json  32.0.yml  33.0-cloudapi.json  33.0-cloudapi.yml  33.0-rest-api.json  33.0.json  33.0.yml  34.0-cloudapi.json  34.0-cloudapi.yml  34.0-rest-api.yml  34.0.json  34.0.yml  35.0-rest-api.json  35.0.json  35.0.yml  35.2-rest-api.json  35.2-rest-api.yml  35.2.json  35.2.yml  36.0.json  36.0.yml  36.1.json  36.1.yml  36.2.json  36.2.yml  (+22 more)
.devcontainer/: Dockerfile  devcontainer.json
scripts/: mirror
transformer/: Cargo.toml
transformer-cloudapi/: .gitignore  .prettierignore  defs.ts  package-lock.json  package.json  paths.ts  transformer.ts  tsconfig.json
transformer-rest-api/: LICENSE
transformer/src/: info.rs  main.rs  paths.rs  queries.rs  schemas.rs  types.rs
transformer/src/parsers/: about.rs
transformer/src/parsers/doc/: common_res.rs  detail_page.rs  landing_gen_operations.rs  mod.rs  operation.rs  query.rs  type.rs
transformer/src/parsers/doc/etc/: annotation.rs  complex_type.rs  field.rs  gen_xsd.rs  group_ref.rs  mod.rs  object_type.rs  primitive_type.rs  schema.rs  sequence_element.rs  simple_type.rs  test.xsd  test_base.xsd  type.rs
transformer/src/parsers/doc/operations/: POST-Login.html  PUT-Test.html
transformer/src/schema_tweaks/: metadata_superclass.rs  mod.rs  query_parameters.rs  query_superclass.rs  stub_ovf.rs
website/: 27.0.json  29.0.json  30.0.json  31.0.json  32.0.json  (+2 more)
(+20 files in other folders)
