[package]
name = "transformer"
version = "0.1.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unhtml = "0.7.5"
unhtml_derive = "0.7.5"
zip = { version = "0.5" }