[package]
name = "transformer"
version = "0.1.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
html2md = "0.2.9"
indexmap = "1.4.0"
lazy_static = "1.4.0"
openapiv3 = "0.3.2"
regex = "1.3.9"
rusty_v8 = "0.5.1"
scraper = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
unhtml = "0.8.0"
unhtml_derive = "0.8.0"
xmltree = "0.10"
zip = "0.6.2"
log = "0.4.8"
env_logger = "0.9.0"